# FreeRTOS-Kernel-meson

./: meson.build
include/: FreeRTOS.h
